feat: working latest version

--- a/indexer/.subgraph.yaml
+++ b/indexer/.subgraph.yaml
@@ -20,6 +20,7 @@ dataSources:
       language: wasm/assemblyscript
       file: ./src/handlers/manaToken.ts
       entities:
+        - Latest
         - TimeSummary
       abis:
         - name: MANAToken
