feat: time series

--- a/indexer/subgraph.yaml
+++ b/indexer/subgraph.yaml
@@ -21,6 +21,7 @@ dataSources:
       file: ./src/handlers/manaToken.ts
       entities:
         - Latest
+        - TimeSummary
       abis:
         - name: MANAToken
           file: ./abis/MANAToken.json
