--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.0",
     "decentraland-ui": "^2.18.0",
     "react": "^16.13.1",
+    "react-charts": "^2.0.0-beta.6",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "serve": "^11.3.0",
