--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "chart.js": "^2.9.3",
     "decentraland-ui": "^2.18.0",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
     "react-charts": "^2.0.0-beta.6",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
