--- a/indexer/package.json
+++ b/indexer/package.json
@@ -19,6 +19,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
     "dcl-tslint-config-standard": "^2.0.0",
+    "keytar": "^6.0.1",
     "prettier": "^1.19.1",
     "truffle": "^5.0.4",
     "truffle-contract": "^4.0.5",
