--- a/indexer/subgraph.yaml
+++ b/indexer/subgraph.yaml
@@ -11,9 +11,9 @@ dataSources:
     name: Voting
     network: mainnet
     source:
-      address: '0x0000000000000000000000000000000000000000'
+      address: '0x2aa9074caa11e30838caf681d34b981ffd025a8b'
       abi: Voting
-      startBlock: 0
+      startBlock: 9352759
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
