--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ build:
     - yarn install && yarn run build
     - cd ..
     - dcl-lock-sync
-    - cd .ci && npm install && dcl-up websites-landing
+    - cd .ci && npm install && dcl-up websites-manaboard
     - dcl-sync-release && cd ..
     - dcl-upload webapp/public
     - cd .ci && dcl-cache-invalidation
